# flake-templates

./: README.md  flake.nix
templates/cpp/: CMakeLists.txt  default.nix  flake.nix
templates/guile/: flake.nix
templates/haskell/: flake.nix
templates/hugo/: flake.nix
templates/julia-jupyter/: flake.nix
templates/python/: .envrc  pyproject.toml
templates/rust/: flake.nix
