[tool.poetry]
name = "name"
# Alternatively, uncomment line below.
# package-mode = false
version = "0.1.0"
description = ""
authors = ["sara-samy <sarrasamyy@icloud.com>"]
readme = "README.md"
packages = [ {include = ""} ]

# poetry update --with dev --with debug
[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
black = "^24.8.0"

[tool.poetry.group.debug.dependencies]
pysnooper = "^1.2.0"
# icecream = "^2.1.3"
# arrgh = "^1.0.0"

[tool.black]
line-length = 75
target-version = ['py37']
# 'extend-exclude' excludes files or directories in addition to the defaults.
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/*.py    # exclude all py files in the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

